[gd_scene load_steps=7 format=2]

[ext_resource path="res://Hole.gd" type="Script" id=1]
[ext_resource path="res://assets/Hole1.png" type="Texture" id=2]
[ext_resource path="res://assets/sfx_sounds_Blip1.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx_exp_odd1.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.9397, 30.2714 )

[sub_resource type="Animation" id=2]
resource_name = "HoleAppeared"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.352941 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.352941 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Sprite"]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.5
anims/HoleAppeared = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="CreationAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
max_distance = 65000.0

[node name="GlitchAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
max_distance = 65000.0

[connection signal="body_entered" from="Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
